fixing border on mobile

--- a/Version2/styles.css
+++ b/Version2/styles.css
@@ -8,7 +8,7 @@
 /* green: rgb(51, 115, 101); */
 
 body, html {
-    background-color: black;
+    background-color: rgb(29, 29, 29);
     height: 100vh;
     margin: 0;
     font-size: 1vw;
@@ -237,6 +237,7 @@ a {
         justify-content: space-evenly;
         padding-top: 20%;
         padding-bottom: 20%;
+        box-shadow: inset 0px 0px 30px 5px var(--border-colour);
     }
     #second img {
         margin-right: 0;
